--- a/PROGRAMMER/index.html
+++ b/PROGRAMMER/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: YUIJ 2645602049@qq.com
+ * @Date: 2022-12-14 14:18:18
+ * @LastEditors: YUIJ 2645602049@qq.com
+ * @LastEditTime: 2022-12-19 14:58:33
+ * @FilePath: \RandomCall\PROGRAMMER\index.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,11 +24,10 @@
             if (xhr.readyState == 4 && xhr.status == 200) {
                 let response = JSON.parse(xhr.responseText);
                 console.log(response['name'])
-                console.log(response['age'])
-            
+                console.log(response['age'])   
             }
         }
-        xhr.open('GET', 'http://www.fishconsole.asia:9090/test?name=Alice', true);
+        xhr.open('GET', '/test?name=Alice', true);
         xhr.send();
     }
     启动ajax()
