--- a/PROGRAMMER/randomcall.html
+++ b/PROGRAMMER/randomcall.html
@@ -49,7 +49,7 @@
 <script>
     子页面_编辑器容器 = document.getElementById('子页面_编辑器容器')
     setTimeout(function () {
-        子页面_编辑器容器.innerHTML = '<iframe src="randomcall_editor" id="子页面_编辑器" style="display:none"></iframe>'
+        子页面_编辑器容器.innerHTML = '<iframe src="editor" id="子页面_编辑器" style="display:none"></iframe>'
         // setTimeout(function () {
         //     子页面_设置页容器.innerHTML = '<iframe src="randomcall_editor.html" frameborder="0" id="子页面_设置页" style="display:none"></iframe>'
         // }, 2500)
@@ -66,7 +66,7 @@
 <script>
     // 程序标识定义
     function 版本号() {
-        return '20221215.750'
+        return '20221217.150'
     }
 
     function 程序名() {
